Add analysis with missing values